feat: JWT token added. Need to fix mock tests to use token and remove the swagger annotations
